crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__json__tests__array_empty.snap
---
source: crates/mcf/src/syntax/grammar/json.rs
expression: "parse_json(\"[]\")"
---
Root(File)
Group(JsonList) at 0:0 - 0:2 {
    Token(LBracket) `[` at 0:0 - 0:1
    Token(RBracket) `]` at 0:1 - 0:2
}

