crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__json__tests__array_nocomma.snap
---
source: crates/mcf/src/syntax/grammar/json.rs
expression: "parse_json(r#\"[true\"#)"
---
Group(JsonList) at 0:0 - 0:5 {
    Token(LBracket) `[` at 0:0 - 0:1
    Joined(BooleanTrue) `true` at 0:1 - 0:5
    Error `Expected one of ','` at 0:5 - 0:5
    Error `Expected one of ']'` at 0:5 - 0:5
}

