crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__json__tests__boolean_false.snap
---
source: crates/mcf/src/syntax/grammar/json.rs
expression: "parse_json(\"false\")"
---
Joined(BooleanFalse) `false` at 0:0 - 0:5

