crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__json__tests__boolean_true.snap
---
source: crates/mcf/src/syntax/grammar/json.rs
expression: "parse_json(\"true\")"
---
Root(File)
Joined(BooleanTrue) `true` at 0:0 - 0:4

