crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__json__tests__null.snap
---
source: crates/mcf/src/syntax/grammar/json.rs
expression: "parse_json(\"null\")"
---
Joined(JsonNull) `null` at 0:0 - 0:4

