crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__json__tests__object_empty.snap
---
source: crates/mcf/src/syntax/grammar/json.rs
expression: "parse_json(\"{}\")"
---
Root(File)
Group(JsonObject) at 0:0 - 0:2 {
    Token(LCurly) `{` at 0:0 - 0:1
    Token(RCurly) `}` at 0:1 - 0:2
}

