crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__json__tests__object_nokey_unclosed.snap
---
source: crates/mcf/src/syntax/grammar/json.rs
expression: "parse_json(r#\"{\"foo\":true,\"#)"
---
Group(JsonObject) at 0:0 - 0:12 {
    Token(LCurly) `{` at 0:0 - 0:1
    Group(JsonObjectEntry) at 0:1 - 0:11 {
        Token(QuotedString) `"foo"` at 0:1 - 0:6
        Token(Colon) `:` at 0:6 - 0:7
        Joined(BooleanTrue) `true` at 0:7 - 0:11
    }
    Token(Comma) `,` at 0:11 - 0:12
    Error `Expected one of 'Quoted String'` at 0:12 - 0:12
    Error `Expected one of '}'` at 0:12 - 0:12
}

