crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__json__tests__string.snap
---
source: crates/mcf/src/syntax/grammar/json.rs
expression: "parse_json(r#\"\"hello world! This is a string\\n with\\n escapes\"\"#)"
---
Root(File)
Token(QuotedString) `"hello world! This is a string\n with\n escapes"` at 0:0 - 0:48

